--- a/.github/workflows/gateway.yaml
+++ b/.github/workflows/gateway.yaml
@@ -20,11 +20,11 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        password: ${{ secrets.TOKEN }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/${{ github.repository_name }}:latest
-        dockerfile: gateway/Dockerfile
+        build: gateway/Dockerfile
