--- a/.github/workflows/gateway.yaml
+++ b/.github/workflows/gateway.yaml
@@ -26,5 +26,5 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: ghcr.io/${{ github.repository }}/gateway:latest
+        tags: ghcr.io/${{ github.repository | lower }}/gateway:latest
         build: gateway/Dockerfile
