--- a/.github/workflows/gateway.yaml
+++ b/.github/workflows/gateway.yaml
@@ -27,5 +27,4 @@ jobs:
       with:
         push: true
         tags: ghcr.io/home_management_system/gateway:latest
-        context: .
-        build: gateway/
+        context: gateway/.
