--- a/.github/workflows/gateway.yaml
+++ b/.github/workflows/gateway.yaml
@@ -26,5 +26,5 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: ghcr.io/${{ github.repository_owner }}/home_management_system_gateway:latest
+        tags: ghcr.io/chanyounghan/home_management_system_gateway:latest
         context: gateway/.
