--- a/.github/workflows/gateway.yaml
+++ b/.github/workflows/gateway.yaml
@@ -28,3 +28,4 @@ jobs:
         push: true
         tags: ghcr.io/chanyounghan/home_management_system_gateway:latest
         context: gateway/.
+        github-token: ${{ secrets.TOKEN }}
